Bug 484063 - No global shortcuts working in Plasma 6 (just upgraded)
Summary: No global shortcuts working in Plasma 6 (just upgraded)
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kglobalaccel
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-20 12:39 UTC by Kryštof Jelínek
Modified: 2024-03-24 21:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: Plasma 6.0.3
Sentry Crash Report:


Attachments
kshortcutsrc (17.15 KB, text/plain)
2024-03-21 18:27 UTC, Kryštof Jelínek
Details
attachment-729046-0.html (953 bytes, text/html)
2024-03-21 20:42 UTC, etoven
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kryštof Jelínek 2024-03-20 12:39:18 UTC
SUMMARY
I have just upgraded to Plasma 6 and no custom shortcuts (now under "commands") are working. When I edit them, I get shown only their name, but not what command they should induce - it's now impossible to edit the action they should induce! Maybe that is the error?


In short, my custom shortcuts have stopped working completely. I think that this is because of a severe mishap in naming the shortcuts vs what the shortcut should actually do.


STEPS TO REPRODUCE
1. Have a/Set a new shortcut in systemsettings
2. Name it
3. Try to execute it / assign a command to it

OBSERVED RESULT
Shortcuts aren't working.

EXPECTED RESULT
Shortcuts to work normally.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240317
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.9-1-default (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 1 fanzhuyifan 2024-03-20 16:15:30 UTC
What shortcut keys are you assigning? How are you verifying that the commands are not being run? Does the issue still occur when you re-assign the shortcuts?
Comment 2 Nicolas Fella 2024-03-20 18:23:11 UTC
Please attach your .config/kglobalshortcutsrc
Comment 3 Kryštof Jelínek 2024-03-21 18:27:53 UTC
Created attachment 167563 [details]
kshortcutsrc
Comment 4 Kryštof Jelínek 2024-03-21 18:28:03 UTC
(In reply to Nicolas Fella from comment #2)
> Please attach your .config/kglobalshortcutsrc

Attached.
Comment 5 Kryštof Jelínek 2024-03-21 18:30:03 UTC
(In reply to fanzhuyifan from comment #1)
> What shortcut keys are you assigning? How are you verifying that the
> commands are not being run? Does the issue still occur when you re-assign
> the shortcuts?

No commands are being run. This is regarding all keyboard shortcuts, using Meta, Ctrl, Shift etc. - nothing makes any difference.

Reassigning the shortcuts does not work.


Also, the subfolders/shotrcut categories are gone and I can't create new ones.
Comment 6 etoven 2024-03-21 19:04:08 UTC
I can confirm also experiencing this behavior.(In reply to Krystof Jelinek from comment #0)
> SUMMARY
> I have just upgraded to Plasma 6 and no custom shortcuts (now under
> "commands") are working. When I edit them, I get shown only their name, but
> not what command they should induce - it's now impossible to edit the action
> they should induce! Maybe that is the error?
> 
> 
> In short, my custom shortcuts have stopped working completely. I think that
> this is because of a severe mishap in naming the shortcuts vs what the
> shortcut should actually do.
> 
> 
> STEPS TO REPRODUCE
> 1. Have a/Set a new shortcut in systemsettings
> 2. Name it
> 3. Try to execute it / assign a command to it
> 
> OBSERVED RESULT
> Shortcuts aren't working.
> 
> EXPECTED RESULT
> Shortcuts to work normally.
> 
> SOFTWARE/OS VERSIONS
> Operating System: openSUSE Tumbleweed 20240317
> KDE Plasma Version: 6.0.2
> KDE Frameworks Version: 6.0.0
> Qt Version: 6.6.2
> Kernel Version: 6.7.9-1-default (64-bit)
> Graphics Platform: Wayland
> Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
> Memory: 31.0 GiB of RAM
> Graphics Processor: Mesa Intel® UHD Graphics 620
Comment 7 Nicolas Fella 2024-03-21 20:12:40 UTC
Is this only about the command shortcuts? Do system shortcuts (like brightness/volume keys etc) work fine?

Can you attach your .config/khotkeysrc file?
Comment 8 etoven 2024-03-21 20:42:27 UTC
Created attachment 167570 [details]
attachment-729046-0.html

Sure I'll attach it later today

On Thu, Mar 21, 2024, 4:12 PM Nicolas Fella <bugzilla_noreply@kde.org>
wrote:

> https://bugs.kde.org/show_bug.cgi?id=484063
>
> --- Comment #7 from Nicolas Fella <nicolas.fella@gmx.de> ---
> Is this only about the command shortcuts? Do system shortcuts (like
> brightness/volume keys etc) work fine?
>
> Can you attach your .config/khotkeysrc file?
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 9 Bug Janitor Service 2024-03-21 21:09:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kglobalacceld/-/merge_requests/48
Comment 10 Nicolas Fella 2024-03-21 21:12:03 UTC
Okay, I see where it's going wrong, there's a problem in the khotkeys migration code.

https://invent.kde.org/plasma/kglobalacceld/-/merge_requests/48 fixes that, but it won't fix already done updates.

You can remove and manually re-add the shortcuts to fix them, or edit the kglobalshortcutsrc file manually and replace e.g.

[services][{348c8c17-66c5-4884-b2b4-c0107defdf64}.desktop]
_launch=Meta+Shift+S,\s

with 

[services][{348c8c17-66c5-4884-b2b4-c0107defdf64}.desktop]
_launch=Meta+Shift+S
Comment 11 etoven 2024-03-21 22:37:11 UTC
Redoing the shortcuts does not appear to fix the issue for me at least. I can apply latest patches and try again however.. When what that update?
Comment 12 etoven 2024-03-21 22:37:37 UTC
(In reply to Nicolas Fella from comment #10)
> Okay, I see where it's going wrong, there's a problem in the khotkeys
> migration code.
> 
> https://invent.kde.org/plasma/kglobalacceld/-/merge_requests/48 fixes that,
> but it won't fix already done updates.
> 
> You can remove and manually re-add the shortcuts to fix them, or edit the
> kglobalshortcutsrc file manually and replace e.g.
> 
> [services][{348c8c17-66c5-4884-b2b4-c0107defdf64}.desktop]
> _launch=Meta+Shift+S,\s
> 
> with 
> 
> [services][{348c8c17-66c5-4884-b2b4-c0107defdf64}.desktop]
> _launch=Meta+Shift+S

Or is the merge not done yet?
Comment 13 Nicolas Fella 2024-03-22 13:01:20 UTC
Git commit 46412a8aa5d5746ebf71c7f6216ada37b5d7f4a2 by Nicolas Fella.
Committed on 21/03/2024 at 21:09.
Pushed by nicolasfella into branch 'master'.

Fix KHotkeys migration

We must only write the current shortcut, not the full old shortcuts string that includes default shortcut and description

M  +1    -1    src/globalshortcutsregistry.cpp

https://invent.kde.org/plasma/kglobalacceld/-/commit/46412a8aa5d5746ebf71c7f6216ada37b5d7f4a2
Comment 14 Nicolas Fella 2024-03-22 13:01:58 UTC
Git commit 2ddcc42067f9104f90cbd69bcfa7347f81023185 by Nicolas Fella.
Committed on 22/03/2024 at 13:01.
Pushed by nicolasfella into branch 'Plasma/6.0'.

Fix KHotkeys migration

We must only write the current shortcut, not the full old shortcuts string that includes default shortcut and description
(cherry picked from commit 46412a8aa5d5746ebf71c7f6216ada37b5d7f4a2)

M  +1    -1    src/globalshortcutsregistry.cpp

https://invent.kde.org/plasma/kglobalacceld/-/commit/2ddcc42067f9104f90cbd69bcfa7347f81023185
Comment 15 Nicolas Fella 2024-03-22 13:04:51 UTC
(In reply to etoven from comment #11)
> Redoing the shortcuts does not appear to fix the issue for me at least. I
> can apply latest patches and try again however.. When what that update?

I mean removing the entry entirely by clicking on the delete icon in the sidebar and re-adding it via "Add new" > "Command or script".

Reassigning a key is a bit broken currently, see https://bugs.kde.org/show_bug.cgi?id=471370
Comment 16 etoven 2024-03-24 21:32:11 UTC
(In reply to Nicolas Fella from comment #15)
> (In reply to etoven from comment #11)
> > Redoing the shortcuts does not appear to fix the issue for me at least. I
> > can apply latest patches and try again however.. When what that update?
> 
> I mean removing the entry entirely by clicking on the delete icon in the
> sidebar and re-adding it via "Add new" > "Command or script".
> 
> Reassigning a key is a bit broken currently, see
> https://bugs.kde.org/show_bug.cgi?id=471370

I'll try that