Fix KHotkeys migration

We must only write the current shortcut, not the full old shortcuts string that includes default shortcut and description

BUG: 484063